[project]
name = "gaia-dr3-dimensionality-reduction"
version = "0.1.0"
description = "Dimensionality reduction experiments on Gaia DR3 dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pacmap>=0.8.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "trimap>=1.1.4",
    "umap-learn>=0.5.8",
]
